--- a/Pet/Pet.csproj
+++ b/Pet/Pet.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="App\Entities\Response\" />
     <Folder Include="Infrastructure\External\" />
   </ItemGroup>
 
