Feat: criação crud usuario  e correções na matriz e ninhada

--- a/Pet/Pet.csproj
+++ b/Pet/Pet.csproj
@@ -21,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="App\Entities\Response\" />
     <Folder Include="Infrastructure\External\" />
+    <Folder Include="Infrastructure\Middleware\" />
   </ItemGroup>
 
 </Project>
