--- a/Pet/appsettings.json
+++ b/Pet/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=PetDream;Username=wesley;Password=root"
+    "DefaultConnection": "Host=localhost;Database=DreamPet;Username=wesley;Password=root"
   }
 }
